fix: security level for password was too high

--- a/client/src/pages/Signup/Signup.scss
+++ b/client/src/pages/Signup/Signup.scss
@@ -52,6 +52,10 @@
     flex-shrink: 0;
   }
 
+  &__error {
+    margin: -12px 0 24px;
+  }
+
   &__login {
     @include body;
     margin-bottom: 0;
